<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    tools:context="ui.activity.TelaInicialActivity">


    <TextView

        android:id="@+id/tvBemVindo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/cabin"
        android:text="@string/bem_vindo_de_volta_administrador"
        android:textAlignment="center"
        android:textColor="@color/textMuted"
        android:textColorHighlight="#CACACA"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTitle" />

    <Button
        android:id="@+id/btnTelaEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/botao_customisado"
        android:backgroundTint="@color/colorPrimary"
        android:fontFamily="@font/cabin"
        android:padding="12dp"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:textColor="@color/colorSecundary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvBemVindo" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/naturebeauty"
        android:text="@string/Events"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="64sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>