<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.activity.HomeEventsActivity"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:headerLayout="@layout/header"
        app:menu="@menu/main_menu"
        android:layout_gravity="start"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

<!--//teste-->

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#00008577"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/menu2_icon" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/eventos_home_events"
            android:textSize="30sp"
            app:fontFamily="@font/cabin"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/cabin"
            android:text="@string/veja_aqui_todos_os_eventos_dispon_veis_home_events"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@drawable/undraw_celebrating" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:background="@drawable/gradientinicio"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/undraw_partying"
                    android:contentDescription="@string/todo" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="UselessLeaf">

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1.6">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvdescript2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:maxLength="22"
                        android:text="@string/evento_1"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvdescript1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvdescript2"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/tcc_sobre_o_sistema_de_eventos_do_itb_belval_destinado_a_estudantes_envento1" />

                    <TextView
                        android:id="@+id/tvdata1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/_20_12_2020_evento1"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/tvhora1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/_08_00_10_00" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:background="@drawable/gradientinicio"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/undraw_partying"
                    android:contentDescription="@string/todo"
                    tools:ignore="ContentDescription" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1.6">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:maxLength="22"
                        android:text="@string/evento_2"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/textView6"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/tcc_sobre_o_sistema_de_eventos_do_itb_belval_destinado_a_estudantes_envento1" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/_20_12_2020_evento1" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/_08_00_10_00" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:background="@drawable/gradientinicio"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/undraw_partying" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1.6">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvEvent3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:maxLength="22"
                        android:text="@string/evento_3"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvDescript3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvEvent3"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/tcc_sobre_o_sistema_de_eventos_do_itb_belval_destinado_a_estudantes_envento1" />

                    <TextView
                        android:id="@+id/tvData3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/_20_12_2020_evento1" />

                    <TextView
                        android:id="@+id/tvHora2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/_08_00_10_00" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:background="@drawable/gradientinicio"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_centerVertical="true"
                    android:layout_margin="5dp"
                    app:srcCompat="@drawable/undraw_partying" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1.6">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvEvent4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:maxLength="22"
                        android:text="@string/evento_4"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/tvDescript4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvEvent4"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/tcc_sobre_o_sistema_de_eventos_do_itb_belval_destinado_a_estudantes_envento1" />

                    <TextView
                        android:id="@+id/tvData4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/_20_12_2020_evento1" />

                    <TextView
                        android:id="@+id/tvHora4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:text="@string/_08_00_10_00" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>